put logo in separate div

--- a/templates/impress.j2
+++ b/templates/impress.j2
@@ -11,12 +11,13 @@
      <link href="impress-common.css" rel="stylesheet" />
     <title>{{ branch }} events!</title>
   </head>
-  <body class="bg-dark">
+  <body>
     <div class="fallback-message visually-hidden">
     <p>Your browser <b>doesn't support the features required</b> by impress.js, so you are presented with a simplified version of this presentation.</p>
     <p>For the best experience please use the latest <b>Chrome</b>, <b>Safari</b> or <b>Firefox</b> browser.</p>
 </div>
-
+<div id="background-wrapper">
+</div>
 <div id="impress"
     data-transition-duration="1000"
     
@@ -95,6 +96,7 @@
 
 -->
 </div>
+
     
     <!-- Optional JavaScript; choose one of the two! -->
 
