--- a/impress-demo.css
+++ b/impress-demo.css
@@ -56,6 +56,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
     line-height: 1;
+
 }
 ol, ul {
     list-style: none;
@@ -92,10 +93,25 @@ body {
     background:     -ms-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
     background:      -o-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
     background:         radial-gradient(rgb(60, 60, 60), rgb(30, 30, 30));
+}
+
+#background-wrapper {
+    position: static;
     background-image: url("logo_name.svg");
-    background-position: top left;
+    /* background-position: top left; */
     background-repeat: no-repeat;
-    background-size: 669px 150px;
+    /* background-size: 669px 150px; */
+    width: 100%;
+    height: 100%;
+    opacity: .6;
+}
+
+#background-wrapper h1 {
+    font-size: 100px;
+    line-height: 110px;
+    margin-left: 10em;
+    color: rgb(255,255,255);
+    /* opacity: .8; */
 }
 
 /*
