--- a/templates/impress.j2
+++ b/templates/impress.j2
@@ -34,7 +34,7 @@
         <h2>{{ event.title }}</h2>
         <img src="{{ event.image }}" />
         <p>{{ event.weekday }}, {{event.month}} {{ event.day }}</p>
-        <p>{{ event.start_time }}</p>
+        <p>{{ event.start_time }} {{ event.campus }}</p>
     </div>
     {% endfor %}
 
