--- a/templates/impress.j2
+++ b/templates/impress.j2
@@ -30,11 +30,17 @@
     data-autoplay="1">
 
     {% for event in events -%}
-    <div class="step" data-x="{{ event.xcor }}" data-y="{{ event.ycor }}" data-z="{{ event.zcor }}" data-scale="{{ event.scale }}" data-rotate-y="{{ event.rotate }}">
+    <div class="step" data-x="{{ event.xcor }}" data-y="{{ event.ycor }}" data-z="{{ event.zcor }}" data-scale="{{ event.scale }}" data-rotate-y="{{ event.rotate }}" data-autoplay="0" >
         <h2>{{ event.title }}</h2>
-        <img src="{{ event.image }}" />
+        <div class="event_info">
+        <div class="image" class="rotating">
+        <img  src="{{ event.image }}" />
+        </div>
+        <div class="info">
         <p>{{ event.weekday }}, {{event.month}} {{ event.day }}</p>
         <p>{{ event.start_time }} {{ event.campus }}</p>
+        </div>
+        </div>
     </div>
     {% endfor %}
 
