--- a/templates/impress.j2
+++ b/templates/impress.j2
@@ -27,10 +27,10 @@
     data-min-scale="0"
     data-perspective="1000"
     
-    data-autoplay="1">
+    data-autoplay="5">
 
     {% for event in events -%}
-    <div class="step" data-x="{{ event.xcor }}" data-y="{{ event.ycor }}" data-z="{{ event.zcor }}" data-scale="{{ event.scale }}" data-rotate-y="{{ event.rotate }}" data-autoplay="0" >
+    <div class="step" data-x="{{ event.xcor }}" data-y="{{ event.ycor }}" data-z="{{ event.zcor }}" data-scale="{{ event.scale }}" data-rotate-y="{{ event.rotate }}"  >
         <h2>{{ event.title }}</h2>
         <div class="event_info">
         <div class="image" class="rotating">
