--- a/templates/impress.j2
+++ b/templates/impress.j2
@@ -38,7 +38,9 @@
         </div>
         <div class="info">
         <p>{{ event.weekday }}, {{event.month}} {{ event.day }}</p>
-        <p>{{ event.start_time }} {{ event.campus }}</p>
+        <p>{{ event.start_time }}</p>
+        <p>{{ event.campus }}</p>
+        <p>{{ event.location }}</p>
         </div>
         </div>
     </div>
