cleaned up times

--- a/templates/impress.j2
+++ b/templates/impress.j2
@@ -38,9 +38,8 @@
         </div>
         <div class="info">
         <p>{{ event.weekday }}, {{event.month}} {{ event.day }}</p>
-        <p>{{ event.start_time }}</p>
-        <p>{{ event.campus }}</p>
-        <p>{{ event.location }}</p>
+        <p>{{ event.start_time }} - {{ event.end_time }}</p>
+        <p>{{ event.campus }} {{ event.location }}</p>
         </div>
         </div>
     </div>
