--- a/impress-demo.css
+++ b/impress-demo.css
@@ -219,6 +219,21 @@ a:focus {
     float: left;
 }
 
+/* .present > div  > .rotating {
+    -webkit-transform: rotate(-10deg);
+    -moz-transform:    rotate(-10deg);
+    -ms-transform:     rotate(-10deg);
+    -o-transform:      rotate(-10deg);
+    transform:         rotate(-10deg);
+
+    -webkit-transition-delay: 0.25s;
+    -moz-transition-delay:    0.25s;
+    -ms-transition-delay:     0.25s;
+    -o-transition-delay:      0.25s;
+    transition-delay:         0.25s;
+} */
+
+
 .step .image img {
     width: 400px;
     border-radius: 50%;
