--- a/impress-demo.css
+++ b/impress-demo.css
@@ -243,7 +243,17 @@ a:focus {
 
 .step .info {
     float: left;
-    padding-left: 40px;
+    padding-left: 20px;
+    /* text-shadow: 2px 2px 2px rgba(20,20,20,0.9); */
+}
+
+.step .info p:first-child{
+    margin-left: -.75em;
+    /* text-shadow: 2px 2px 2px rgba(20,20,20,0.9); */
+}
+
+.step .info p:last-child{
+    margin-left: .5em;
     /* text-shadow: 2px 2px 2px rgba(20,20,20,0.9); */
 }
 
