--- a/impress-demo.css
+++ b/impress-demo.css
@@ -85,7 +85,7 @@ table {
 body {
     font-family: 'PT Sans', sans-serif;
     min-height: 740px;
-    color: rgb(220,220,220);
+    color: rgb(240,240,240);
     background: rgb(215, 215, 215);
     background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 500, from(rgb(240, 240, 240)), to(rgb(190, 190, 190)));
     background: -webkit-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
@@ -196,8 +196,8 @@ a:focus {
     box-sizing:         border-box;
 
     font-family: 'PT Serif', georgia, serif;
-    font-size: 48px;
-    line-height: 1.5;
+    font-size: 60px;
+    line-height: 1.2em;
 
 }
 
@@ -247,13 +247,20 @@ a:focus {
     /* text-shadow: 2px 2px 2px rgba(20,20,20,0.9); */
 }
 
-.step .info p:first-child{
-    margin-left: -.75em;
+.step .info .event_date{
+    margin-left: -.6em;
     /* text-shadow: 2px 2px 2px rgba(20,20,20,0.9); */
 }
 
-.step .info p:last-child{
+.step .info .event_time{
+    font-size: inherit;
+}
+
+.step .info .event_location{
+    font-size: 36px;
+    line-height: 1.2em;
     margin-left: .5em;
+
     /* text-shadow: 2px 2px 2px rgba(20,20,20,0.9); */
 }
 
