created add_event_info to as data to events

--- a/templates/impress.j2
+++ b/templates/impress.j2
@@ -10,7 +10,7 @@
     -->
     <link href="impress-demo.css" rel="stylesheet" />
      <link href="impress-common.css" rel="stylesheet" />
-    <title>{{ branch }} events!</title>
+    <title>Lebanon Public Libraries -- Events</title>
   </head>
   <body>
     <div class="fallback-message visually-hidden">
