--- a/templates/impress.j2
+++ b/templates/impress.j2
@@ -8,8 +8,8 @@
     <!-- Bootstrap CSS 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     -->
-    <link href="impress-demo.css" rel="stylesheet" />
-     <link href="impress-common.css" rel="stylesheet" />
+    <link href="css/custom.css" rel="stylesheet" />
+     <link href="css/impress-common.css" rel="stylesheet" />
     <title>Lebanon Public Libraries -- Events</title>
   </head>
   <body>
