initial working with oop

--- a/templates/impress.j2
+++ b/templates/impress.j2
@@ -31,7 +31,7 @@
     data-autoplay="5">
 
     {% for event in events -%}
-    <div class="step" data-x="{{ event.xcor }}" data-y="{{ event.ycor }}" data-z="{{ event.zcor }}" data-scale="{{ event.scale }}" data-rotate-y="{{ event.rotate }}">
+    <div class="step" data-x="{{ event.xcor }}" data-y="{{ event.ycor }}" data-z="{{ event.zcor }}" data-scale="{{ event.scale }}" data-rotate-y="{{ event.rotate_y }}">
         <h2>{{ event.title }}</h2>
         <div class="event_info">
         <div class="image">
